--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "tweed",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "src/app.ts",
     "scripts": {
+        "start": "ts-node src/app.ts",
         "build": "tsc",
-        "start": "npm run build && node dist/app.js",
-        "dev": "ts-node src/app.ts",
-        "test": "jest --passWithNoTests"
+        "test": "jest"
     },
     "keywords": [],
     "author": "Tomer Erlichman",
@@ -16,13 +15,21 @@
         "cors": "^2.8.5",
         "express": "^4.21.2",
         "ioredis": "^5.6.0",
+        "supertest": "^7.0.0",
+        "ts-node": "^10.9.2",
         "winston": "^3.17.0"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.13.10",
-        "typescript": "^5.8.2"
+        "typescript": "^5.8.2",        
+        "@babel/preset-env": "^7.26.0",
+        "@types/supertest": "^6.0.2",
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5"
     }
 }
