--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "6379:6379"
 
-  tweed:
+  tweed-test:
     build: .
     container_name: tweed-app-test
     environment:
@@ -13,11 +13,10 @@ services:
       - PORT=3001
       - REDIS_PORT=6379
       - REDIS_HOST=redis
-      - STANDARD_TIER_RATE_LIMIT=5
-      - HIGH_TIER_RATE_LIMIT=30
+      - STANDARD_TIER_RATE_LIMIT=10
+      - HIGH_TIER_RATE_LIMIT=50
       - SLIDING_WINDOW_TIME_IN_SEC=10
     ports:
       - "3001:3000"
     depends_on:
       - redis
-    command: ["sh", "-c", "npm test"]
