--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
         "ioredis": "^5.6.0",
         "supertest": "^7.0.0",
         "ts-node": "^10.9.2",
+        "uuid": "^11.1.0",
         "winston": "^3.17.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.26.0",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.13.10",
-        "typescript": "^5.8.2",        
-        "@babel/preset-env": "^7.26.0",
         "@types/supertest": "^6.0.2",
         "jest": "^29.7.0",
         "supertest": "^7.0.0",
-        "ts-jest": "^29.2.5"
+        "ts-jest": "^29.2.5",
+        "typescript": "^5.8.2"
     }
 }
